--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
 
 /*-----------------------navigation bar------------------*/
 
+/*------------------------navigation-------------------*/
 nav{
   display: flex;
   padding: 2% 6%;
@@ -49,6 +50,65 @@ nav img{
   text-decoration: none;
   font-size:17px ;
 }
+
+.nav-links ul li::after{
+  content:'' ;
+  width: 0%;
+  height: 2px;
+  background: #ED1C24;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+
+.nav-links ul li:hover::after{
+  width: 100%;
+} 
+
+/*-------hide nav icons for larger breakpoints-----*/
+nav .fa{
+  display: none;
+  color: white;
+}
+
+
+@media(max-width: 700px){
+  .text-box h1{
+      font-size: 20px;
+  }
+
+  .nav-links ul li{
+      display: block;
+  }
+
+  .nav-links{
+      position: absolute;
+      background: #ED1C24;
+      height: 100vh;
+      width: 200px;
+      top: 0;
+      right: -200px;
+      text-align: left;
+      z-index: 2;
+      transition: 1s
+  }
+      /*-----display nav icons for smaller screens-----*/
+      nav .fa{
+      display: block;
+      color:white;
+      margin: 10px;
+      font-size: 22px;
+      cursor: pointer;
+  }
+
+
+  .nav-links ul{
+      padding: 30px;
+
+  }
+
+}
+
 
 /*-----------------Hero------------------*/
 
@@ -91,13 +151,32 @@ nav img{
   line-height: 30px;
 }
 
-
-.resume a:hover{
-  color: gray;
+.resume{
+  cursor: pointer;   
+  padding: 18px 38px;
+  background-color: #171616; 
+  margin-bottom:122px; 
+  color: white; 
+  font-size: 19px; 
+  border-style: solid; 
+  border-color: #FDFAFA; 
+  border-width: 1px; 
+  border-radius:50px;
 }
+
+
+.resume :hover{
+ background-color: rgb(158, 158, 158);
+}
+
 
 /*------------footer----------------*/
 
 .footer{
   color: white;
+}
+
+.icons{
+  align-items: center;
+  justify-content: center;
 }
